// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropdownLink renders and anchors to left by default 1`] = `
<div>
  <span
    class="dropdown top-level-class css-gy25vq-getRootCss"
    data-test-id="dropdown-link"
  >
    <a
      aria-expanded="false"
      aria-haspopup="listbox"
      class="dropdown-actor dropdown-toggle"
      style="outline: none;"
    >
      <div
        class="dropdown-actor-title"
      >
        test
        <svg
          class="css-1905w31-IconChevron"
          fill="currentColor"
          height="12px"
          viewBox="0 0 16 16"
          width="12px"
        >
          <path
            d="M14,11.75a.74.74,0,0,1-.53-.22L8,6.06,2.53,11.53a.75.75,0,0,1-1.06-1.06l6-6a.75.75,0,0,1,1.06,0l6,6a.75.75,0,0,1,0,1.06A.74.74,0,0,1,14,11.75Z"
          />
        </svg>
      </div>
    </a>
    <ul
      class="dropdown-menu"
      role="listbox"
    >
      <div>
        1
      </div>
      <div>
        2
      </div>
    </ul>
  </span>
</div>
`;

exports[`DropdownLink renders and anchors to right 1`] = `
<div>
  <span
    class="dropdown top-level-class pull-right anchor-right css-gy25vq-getRootCss"
    data-test-id="dropdown-link"
  >
    <a
      aria-expanded="false"
      aria-haspopup="listbox"
      class="dropdown-actor dropdown-menu-right dropdown-toggle"
      style="outline: none;"
    >
      <div
        class="dropdown-actor-title"
      >
        test
        <svg
          class="css-1905w31-IconChevron"
          fill="currentColor"
          height="12px"
          viewBox="0 0 16 16"
          width="12px"
        >
          <path
            d="M14,11.75a.74.74,0,0,1-.53-.22L8,6.06,2.53,11.53a.75.75,0,0,1-1.06-1.06l6-6a.75.75,0,0,1,1.06,0l6,6a.75.75,0,0,1,0,1.06A.74.74,0,0,1,14,11.75Z"
          />
        </svg>
      </div>
    </a>
    <ul
      class="dropdown-menu"
      role="listbox"
    >
      <div>
        1
      </div>
      <div>
        2
      </div>
    </ul>
  </span>
</div>
`;
